<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/item_home" />
        <item
            android:id="@+id/item_partition"
            android:icon="@mipmap/ic_partition_black_24dp"
            android:title="@string/item_partition" />
        <item
            android:id="@+id/item_trends"
            android:icon="@mipmap/ic_trends_black_24dp"
            android:title="@string/item_trends" />
        <item
            android:id="@+id/item_discovery"
            android:icon="@mipmap/ic_search_black_24dp"
            android:title="@string/item_discovery" />
        <item
            android:id="@+id/item_mine"
            android:icon="@mipmap/ic_mine_black_24dp"
            android:title="@string/item_mine" />
    </group>
    <group
        android:id="@+id/group_mine"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_download"
            android:icon="@mipmap/ic_file_download_black_24dp"
            android:title="@string/item_downloaded" />
        <item
            android:id="@+id/item_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/item_history" />
        <item
            android:id="@+id/item_follow"
            android:icon="@mipmap/ic_people_black_24dp"
            android:title="@string/item_follow" />
    </group>
    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_skin_change"
            android:icon="@mipmap/ic_color_lens_black_24dp"
            android:title="@string/item_theme" />
        <item
            android:id="@+id/item_app"
            android:icon="@mipmap/ic_shop_black_24dp"
            android:title="@string/item_app" />
        <item
            android:id="@+id/item_setting"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/item_settings" />
    </group>

</menu>